[gd_scene load_steps=2 format=3 uid="uid://bf4g8jhq8l0ep"]

[ext_resource type="Script" path="res://Scenes/Component/Skill/SkillDisplayPanel.gd" id="1"]

[node name="SkillDisplayPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Skill System"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerInfo" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GoldLabel" type="Label" parent="VBoxContainer/PlayerInfo"]
layout_mode = 2
text = "Gold: 0"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Controls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddSkillButton" type="Button" parent="VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Test Skill"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SkillList" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
